fix: adjust image size with width and height attributes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lasagna</h1>
     <a href="./../index.html">Home</a>
-    <img src="./../assets/images/lasagna.jpg" alt="delicious Lasagna">
+    <img src="./../assets/images/lasagna.jpg" alt="delicious Lasagna" height="310" width="310">
     <h2>Delicious Lasagna</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, cupiditate delectus? Beatae culpa neque ab eum cum temporibus est enim!</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, unde?</p>
