fix: replace image height value wiht auto

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lasagna recipe</title>
+    <link rel="stylesheet" href="./../css/style.css">
+    <style>
+        *{
+            color: #65f5f7;
+        }
+        h2 {
+            color: blue;
+        }
+        .class1 {
+            color: yellow;
+        }
+        #unique {
+            color: white;
+            background-color: black;
+        }
+    </style>
+    
 </head>
 <body>
+    <a href="#steps">steps</a>
     <h1>Lasagna</h1>
     <a href="./../index.html">Home</a>
-    <img src="./../assets/images/lasagna.jpg" alt="delicious Lasagna" height="310" width="310">
-    <h2>Delicious Lasagna</h2>
+    <img src="./../assets/images/lasagna.jpg" alt="delicious Lasagna" height="auto" width="310">
+    <h2 class="class1 class2" id="unique">Delicious Lasagna</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, cupiditate delectus? Beatae culpa neque ab eum cum temporibus est enim!</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, unde?</p>
     <h2>Ingredient</h2>
@@ -19,7 +37,7 @@
         <li>Lorem, ipsum.</li>
         <li>Lorem ipsum dolor sit.</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 id="steps">Steps</h2>
     <ol>
         <li>step-one</li>
         <li>step-two</li>
